--- a/index.html
+++ b/index.html
@@ -1,4 +1,45 @@
 < !doctype html />
 <html>
-
+<head>
+  <title> Layout Index</title>
+  <link rel="stylesheet" href"./styles/mystyles.css">
+</head>
+<body>
+  <div id="wrapper">
+    <header>
+        <h1>My Page</h1>
+    </header>
+    <div id="content"> 
+        <nav>
+            <ul>
+           <li> link one </li>
+            <li> link 2 </li>
+            <li> link 3 </li>
+            </ul>
+        </nav>
+           <article>
+               <header class= "articlehead">
+                   <h1> Article Headline </h1>
+               </header>
+               <section>
+                   <p>One Singular Sensation</p>
+               </section>
+               <footer class="article-footer">
+                   <p>article footer </p>
+               </footer>
+        </article>
+        <aside>
+             <ul>
+           <li> link one </li>
+            <li> link 2 </li>
+            <li> link 3 </li>
+            </ul>
+        </aside>
+        
+    </div>
+    <footer id="page-footer">
+        page footer
+    </footer>
+</div>
+</body>
 </html>
